--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  html,body{
+    height: 100%;
+      
+  }
+  
+  :root {
+    --h1-font-size: clamp(2rem, 3vh, 2.4rem);
+    --h2-font-size: clamp(1.4rem, 2.4vh, 1.8rem);
+    --h3-font-size: clamp(1.2rem, 2vh, 1.4rem);
+    --p-font-size: clamp(0.9rem, 1.8vh, 1.2rem);
+    --label-font-size: clamp(0.7rem, 1.4vh, 0.9rem);
+    --font-proportion: 1;
+  }
+  
+  h1 {
+    font-size: var(--h1-font-size);
+  }
+  
+  h2 {
+    font-size: var(--h2-font-size);
+  }
+  
+  h3 {
+    font-size: var(--h3-font-size);
+  }
+  
+  p {
+    font-size: var(--p-font-size);
+  }
+  
+  label {
+    font-size: var(--label-font-size);
+    
+  }
+  
+  fieldset{
+    border: none;
+  }
+  
+  input{
+    padding: .4rem;
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+    font-size: medium;
+  }
+  
