--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="home">
     <fieldset class="input-label">
         <label>Digite para converter em QrCode</label>
-        <app-input-text></app-input-text>
+        <app-input-text (change)="handleInputTextChange($event)"></app-input-text>
     </fieldset>
 
     <app-primary-button (click)="handleButtonClick()">Vai!</app-primary-button>
