added device orientation handler in qr-code

--- a/src/app/views/qr-code/qr-code.component.html
+++ b/src/app/views/qr-code/qr-code.component.html
@@ -9,7 +9,11 @@
             <div class="img middle" [ngStyle]="{'background-image':'url(' + imgUrl() + ')'}"></div>
             <div class="img botto" [ngStyle]="{'background-image':'url(' + imgUrl() + ')'}"></div>
 
-        </div>    
+        </div>
+        
+        shouldRotate: {{shouldRotate()}}
+        x:{{rotX()}}
+        y:{{rotY()}}
     
 </section>
 
